--- a/functions/report/template/template.html
+++ b/functions/report/template/template.html
@@ -1,82 +1,127 @@
 <html>
 <head>
+	<link rel="stylesheet" href="functions/report/template/style.css">
 	<title>Good Cloud Practice Report</title>
 </head>
 	<body>
-		<img src="images/logo.png" alt="Logo">
+		<div class="wrapper">
+			<header class="header">
+				<center><img src="images/logo.png" alt="Logo"></center>
+			</header>
+			<main class="content">
+				</br></br></br></br></br>
 
-		<p>Report</p>
-		<p>User : {{ user }}</p>
-		<p>{{ date }}</p>
+				<table >
+					<tbody>
+						<tr>
+							<td>Report</td>
+							<td>{{ date }}</td>
+						</tr>
+						<tr>
+							<td>User : {{ user }}</td>
+						</tr>
+					</tbody>
+				</table>
 
+				{% for project, results in all_results.items() %}
+					<center><h1>{{ project }}</h1></center>
 
-		{% for project, results in all_results.items() %}
-			<h1>{{ project }}</h1>
+					<table class="center_table">
+						<tbody>
+							<tr>
+								<td><img src="functions/report/graph_images/graph_by_severity_{{ project }}.png" alt="Graph {{ project }}"></td>
+								<td><img src="functions/report/graph_images/graph_by_types_{{ project }}.png" alt="Graph {{ project }}"></td>
+							</tr>
+						</tbody>
+					</table>
+					
 
-			<p>Graphique - Summary</p>
-			<img src="functions/report/graph_images/graph_by_severity_{{ project }}.png" alt="Graph {{ project }}">
-
-			<details>
-				<summary>Results</summary>
-				{% if results["non_compliant"] %}
 					<details>
-						<summary>Non compliant</summary>
-						{% for key, values in results["non_compliant"].items() %}
+						<summary>Results</summary>
+						{% if results["non_compliant"] %}
 							<details>
-							 	<summary>{{ values[0] }} - {{ key }} : x</summary>
-								<table>
-									<tbody>
-										<tr>
-											<td>Information</td>
-										</tr>
-										<tr>
-											<td>{{ values[1] }}</td>
-										</tr>
-										<tr>
-											<td>Details</td>
-										</tr>
-										<tr>
-											<td>{{ values[2] }}</td>
-										</tr>
-										<tr>
-											<td>Fix</td>
-										</tr>
-										<tr>
-											<td>{{ values[3] }}</td>
-										</tr>
-										<tr>
-											<td>References</td>
-										</tr>
-										<tr>
-											<td>{{ values[4] }}</td>
-										</tr>
-									</tbody>
-								</table>
+								<summary>Non compliant</summary>
+								{% for key, values in results["non_compliant"].items() %}
+									<details>
+									 	<summary>{{ values[0] }} - {{ key }} : x</summary>
+										<table>
+											<tbody>
+												<tr>
+													<td>Information</td>
+												</tr>
+												<tr>
+													<td>{{ values[1] }}</td>
+												</tr>
+												<tr>
+													<td>Details</td>
+												</tr>
+												<tr>
+													<td>{{ values[2] }}</td>
+												</tr>
+												<tr>
+													<td>Fix</td>
+												</tr>
+												<tr>
+													<td>{{ values[3] }}</td>
+												</tr>
+												<tr>
+													<td>References</td>
+												</tr>
+												<tr>
+													<td>{{ values[4] }}</td>
+												</tr>
+											</tbody>
+										</table>
+									</details>
+								{% endfor %}
 							</details>
-						{% endfor %}
-					</details>
-				{% endif %}
-				{% if results["compliant"] %}
-					<details>
-						<summary>Compliant</summary>
-						{% for key, values in results["compliant"].items() %}
+						{% endif %}
+						{% if results["compliant"] %}
 							<details>
-								<summary>{{ values[0] }} - {{ key }} : v</summary>
-								<table>
-							 		<tbody>
-							 			<tr>
-											<td>Information</td>
-							 			</tr>
-										<tr>
-											<td>{{ values[1] }}</td>
-										</tr>
-									</tbody>
-								</table>
+								<summary>Compliant</summary>
+								{% for key, values in results["compliant"].items() %}
+									<details>
+										<summary>{{ values[0] }} - {{ key }} : v</summary>
+										<table>
+									 		<tbody>
+									 			<tr>
+													<td>Information</td>
+									 			</tr>
+												<tr>
+													<td>{{ values[1] }}</td>
+												</tr>
+											</tbody>
+										</table>
+									</details>
+								{% endfor %}
 							</details>
-						{% endfor %}
+						{% endif %}
+						{% if results["errors"] %}
+							<details>
+								<summary>Errors</summary>
+								{% for key, values in results["errors"].items() %}
+									<details>
+										<summary>{{ values[0] }} - {{ key }} : v</summary>
+										<table>
+									 		<tbody>
+									 			<tr>
+													<td>Information</td>
+									 			</tr>
+												<tr>
+													<td>{{ values[1] }}</td>
+												</tr>
+											</tbody>
+										</table>
+									</details>
+								{% endfor %}
+							</details>
+						{% endif %}
 					</details>
-				{% endif %}
-			</details>
-		{% endfor %}
+				{% endfor %}
+			</main>
+		</div>
+	<footer class="footer">
+		<center>This is the footer</center>
+	</footer>
 	</body>
 </html>
