--- a/functions/report/template/template.html
+++ b/functions/report/template/template.html
@@ -12,11 +12,11 @@
 			<main class="content">
 				</br></br></br></br></br>
 
-				<table >
+				<table class="date_table">
 					<tbody>
 						<tr>
 							<td>Report</td>
-							<td>{{ date }}</td>
+							<td class="date">{{ date }}</td>
 						</tr>
 						<tr>
 							<td>User : {{ user }}</td>
