--- a/functions/report/template/style_details.css
+++ b/functions/report/template/style_details.css
@@ -116,6 +116,9 @@ details ul li span {
   display: block;
   font-size: 0.9em;
   font-weight: normal;
+  width: 80%;
+  padding-left: 20px;
+
 }
 details ul li span:before {
   opacity: 0.3;
