--- a/functions/report/template/style_details.css
+++ b/functions/report/template/style_details.css
@@ -1,8 +1,6 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
 body {
   background: #edf5fa;
-  font-family: "Nunito", sans-serif;
 }
 details {
   width: 100%;
@@ -118,7 +116,7 @@ details ul li span {
   font-weight: normal;
   width: 80%;
   padding-left: 20px;
-
+  margin-top: 2px;
 }
 details ul li span:before {
   opacity: 0.3;
