--- a/functions/report/template/template.html
+++ b/functions/report/template/template.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-	<link rel="stylesheet" href="functions/report/template/style.css">
-	<link rel="stylesheet" href="functions/report/template/style_details.css">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/style_details.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src = "functions/report/template/script.js" type = "text/javascript"/></script>
+	<script src = "./js/script.js" type = "text/javascript"/></script>
 	<title>Good Cloud Practice Report</title>
 </head>
 	<body>
 		<div class="wrapper">
 			<header class="header">
-				<center><img src="images/logo.png" alt="Logo"></center>
+				<center><img src="./images/logo.png" alt="Logo"></center>
 			</header>
 			<main class="content">
 				</br></br></br></br></br>
@@ -33,8 +33,8 @@
 						<table class="center_table">
 							<tbody>
 								<tr>
-									<td><img src="functions/report/graph_images/graph_by_severity_{{ project }}.png" alt="Graph {{ project }}"></td>
-									<td><img src="functions/report/graph_images/graph_by_types_{{ project }}.png" alt="Graph {{ project }}"></td>
+									<td><img src="./graph_images/graph_by_severity_{{ project }}.png" alt="Graph {{ project }}"></td>
+									<td><img src="./graph_images/graph_by_types_{{ project }}.png" alt="Graph {{ project }}"></td>
 								</tr>
 							</tbody>
 						</table>
