add a summary at the beginning of the report which is the sum of non compliance of each scan, graph and all in a global section, only printing it if there is at least two GCP project scan, still need to href some links in fix or background - done, replace   with div which is styled in css

--- a/functions/report/template/style.css
+++ b/functions/report/template/style.css
@@ -206,3 +206,10 @@ section {
   border-radius: 10%;
   line-height: 25px;
 }
+
+.code {
+  font-style: italic;
+  background-color: #fff;
+  padding: 0 10 10 10;
+  border-radius: 10%;
+}
